Bug 1674702 - Do not bounce IPC message to framer if focus is handled synchronously in OOP iframe; r=hsivonen

This suppress unnecessary blur and focus actions in the framer, we would need
to find a way to notify framer that the focus has moved to OOP iframe to
dispatch corresponding blur event, see bug 1677474.

Differential Revision: https://phabricator.services.mozilla.com/D97158